--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -81,7 +81,7 @@
     <label th:text="${userName} + 님"></label>
 </div>
 <div th:if="!${userName}">
-    <a th:href="@{/oauth2/authorization/google}" class="btn btn-primary me-2 active" role="button">로그인</a>
+    <a th:href="@{/login}" class="btn btn-primary me-2 active" role="button">로그인</a>
 </div>
 
 <div class="tail">
