--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -97,15 +97,16 @@
 </header>
 
 <div class="login-container">
-  <form>
+  <form action="/login" method="post">
     <label for="username">아이디</label>
     <input type="text" id="username" name="username" required>
     <label for="password">비밀번호</label>
     <input type="password" id="password" name="password" required>
     <input type="submit" value="로그인">
-    <a href="/register">회원가입</a>
-    <a href="/login/oauth2/code/google">google login</a>
   </form>
+  <a href="/register">회원가입</a>
+  <br>
+  <a href="/login/oauth2/code/google">google login</a>
 </div>
 
 <div class="tail">
