상품 업로드 MVC 추가

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -71,6 +71,7 @@
     <div th:if="${userName}">
         <label th:text="${userName} + '님'"></label>
         <a th:href="@{/logout}" class="btn btn-info active" role="button">로그아웃</a>
+        <a th:href="@{/upload}" class="btn btn-info active" role="button">상품 등록하기</a>
     </div>
     <div th:if="!${userName}">
         <a th:href="@{/login}" class="btn btn-primary me-2 active" role="button">로그인</a>
