--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -76,6 +76,11 @@
     <div th:if="!${userName}">
         <a th:href="@{/login}" class="btn btn-primary me-2 active" role="button">로그인</a>
     </div>
+
+    <form class="d-flex" th:action="@{/search}" method="get">
+        <input class="form-control me-2" type="search" placeholder="검색어" aria-label="Search" name="keyword">
+        <button class="btn btn-outline-success" type="submit">검색</button>
+    </form>
 </div>
 
 <div class="tail">
