--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -28,8 +28,8 @@
 
         p1 {
             font-size: 1.2em;
-            margin-top: 20%;
-            margin-left: 15%;
+            margin-left: 3%;
+            margin-top: 10%;
         }
 
         /* 추가된 스타일 */
@@ -51,10 +51,6 @@
             margin-right: 10px;
         }
 
-        tail {
-            margin-top: 0%;
-            margin-left: 50%;
-        }
         ul {
             list-style: none;
             padding: 0;
@@ -72,36 +68,54 @@
             padding: 10px;
             box-sizing: border-box;
         }
+
+        a {
+            text-decoration: none;
+            color: #000;
+        }
+
+        header {
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+
+            height: 75px;
+            padding: 1rem;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
     </style>
 </head>
 <body>
+
 <header>
-    <h1>Flora_Shop</h1>
+    <h1 onclick="redirectToHome()">Flora_Shop</h1>
+    <nav style="top:0.5%; right: 2%;">
+        <div th:if="${userName}">
+            <label th:text="${userName} + '님'"></label>
+            <a th:href="@{/upload}" class="btn btn-info active" role="button">상품등록</a>
+            <a th:href="@{/basket}" class="btn btn-info active" role="button">장바구니</a>
+            <a th:href="@{/mypage}" class="btn btn-info active" role="button">마이페이지</a>
+            <a th:href="@{/logout}" class="btn btn-info active" role="button">로그아웃</a>
+        </div>
+        <div th:if="!${userName}">
+            <a th:href="@{/login}" class="btn btn-primary me-2 active" role="button">로그인</a>
+        </div>
+
+        <form class="d-flex" th:action="@{/search}" method="get">
+            <input class="form-control me-2" type="search" placeholder="검색어" aria-label="Search" name="keyword">
+            <button class="btn btn-outline-success" type="submit">검색</button>
+        </form>
+    </nav>
 </header>
 
-<section>
-    <p1>환영합니다! 최신 상품을 확인하세요.</p1>
-</section>
-
-<div style="position: absolute; top:1%; right: 2%;">
-    <div th:if="${userName}">
-        <label th:text="${userName} + '님'"></label>
-        <a th:href="@{/upload}" class="btn btn-info active" role="button">상품 등록</a>
-        <a th:href="@{/basket}" class="btn btn-info active" role="button">장바구니</a>
-        <a th:href="@{/mypage}" class="btn btn-info active" role="button">마이페이지</a>
-        <a th:href="@{/logout}" class="btn btn-info active" role="button">로그아웃</a>
-    </div>
-    <div th:if="!${userName}">
-        <a th:href="@{/login}" class="btn btn-primary me-2 active" role="button">로그인</a>
-    </div>
-
-    <form class="d-flex" th:action="@{/search}" method="get">
-        <input class="form-control me-2" type="search" placeholder="검색어" aria-label="Search" name="keyword">
-        <button class="btn btn-outline-success" type="submit">검색</button>
-    </form>
+<main>
+<div>
+    <p style="margin-top: 8%; margin-left: 11%; font-size: 1.2em">환영합니다! 최신 상품을 확인하세요.</p>
 </div>
-
-<div th:if="${items}">
+<div th:if="${items}" style="margin-top: 1%; margin-left: 1%; overflow-y: scroll; height: 300px;"> <!-- 조절 가능한 값 -->
     <ul>
         <li th:each="item : ${items}">
             <p th:text="${item.name}"></p>
@@ -113,5 +127,13 @@
 <div class="tail">
     <p>&copy; 2024 flora_shop. All right reserved.</p>
 </div>
+</main>
 </body>
+
+<script>
+    function redirectToHome() {
+        window.location.href = "/";
+    }
+</script>
+
 </html>
