장바구니 기능 구현

--- a/src/main/resources/templates/mypage.html
+++ b/src/main/resources/templates/mypage.html
@@ -139,7 +139,7 @@
       <li><p style="font-weight: 900;">쇼핑 정보</p></li>
       <li><a href="#">구매 내역</a></li>
       <li><a href="#">판매 내역</a></li>
-      <li><a href="#">보관 판매</a></li>
+      <li><a th:href="@{/cart}" class="btn btn-info active" role="button">장바구니</a></li>
       <li><a href="#">관심</a></li>
       <br>
       <li><p style="font-weight: 900;">내 정보</p></li>
