--- a/src/main/resources/templates/mypage.html
+++ b/src/main/resources/templates/mypage.html
@@ -119,10 +119,11 @@
       right: 0;
 
       height: 75px;
-      padding: 1rem;
+      padding: 0.5rem;
       display: flex;
       justify-content: space-between;
       align-items: center;
+      background-color: #f4f4f4;
     }
   </style>
 </head>
@@ -137,9 +138,9 @@
 
       <li><h2>마이 페이지</h2></li>
       <li><p style="font-weight: 900;">쇼핑 정보</p></li>
-      <li><a href="#">구매 내역</a></li>
+      <li><a href="/order">구매 내역</a></li>
       <li><a href="#">판매 내역</a></li>
-      <li><a th:href="@{/cart}" class="btn btn-info active" role="button">장바구니</a></li>
+      <li><a href="/cart">장바구니</a></li>
       <li><a href="#">관심</a></li>
       <br>
       <li><p style="font-weight: 900;">내 정보</p></li>
