--- a/src/main/resources/templates/upload.html
+++ b/src/main/resources/templates/upload.html
@@ -97,10 +97,11 @@
             right: 0;
 
             height: 75px;
-            padding: 1rem;
+            padding: 0.5rem;
             display: flex;
             justify-content: space-between;
             align-items: center;
+            background-color: #f4f4f4;
         }
     </style>
 </head>
