--- a/src/main/resources/templates/order.html
+++ b/src/main/resources/templates/order.html
@@ -122,38 +122,29 @@
         <label for="quantity" style="font-size: 1.2em; margin-right: 10px;">수량:</label>
         <input type="number" id="quantity" name="quantity" value="1" min="1" style="padding: 5px; width: 50px;">
 
-        <form action="/purchase" method="post" id="purchaseForm" style="display: inline-block; margin-right: 10px;">
+        <form action="/purchase" method="post" style="display: inline-block; margin-right: 10px;">
             <input type="hidden" name="quantity" id="hiddenQuantity" />
             <input type="hidden" name="id" th:value="${item.id}" />
             <button type="submit" style="padding: 8px; background-color: #000000; color: white; border: none; border-radius: 5px; cursor: pointer;">구매</button>
         </form>
 
-        <form action="/cart/add" method="post" id="cartForm" style="display: inline-block;">
+        <div th:if="${message}" th:inline="text">
+            <script th:inline="javascript">
+                var confirmation = confirm("이미 존재하는 상품입니다. 장바구니 이동하시겠습니까?");
+                if (confirmation) {
+                    window.location.href = "/cart";
+                } else {
+                    console.log("사용자가 확인을 취소했습니다.");
+                }
+            </script>
+        </div>
+
+        <form action="/cartadd" method="post" style="display: inline-block;">
             <input type="hidden" name="quantity" id="hiddenCartQuantity" />
+            <input type="hidden" name="id" th:value="${item.id}" />
             <button type="submit" style="padding: 8px; background-color: #3c4e54; color: white; border: none; border-radius: 5px; cursor: pointer;">장바구니에 담기</button>
         </form>
-
-        <script>
-            document.getElementById('quantity').addEventListener('input', function () {
-                var quantity = this.value;
-                document.getElementById('hiddenQuantity').value = quantity;
-                document.getElementById('hiddenCartQuantity').value = quantity;
-            });
-        </script>
     </div>
-
-    <div class="login-container">
-        <form action="/item" method="post">
-            <label for="name">이름</label>
-            <input type="text" id="name" name="name" required>
-            <label for="username">아이디</label>
-            <input type="text" id="username" name="username" required>
-            <label for="password">비밀번호</label>
-            <input type="password" id="password" name="password" required>
-            <input type="submit" value="회원가입">
-        </form>
-    </div>
-
 
     <div class="tail">
         <p>&copy; 2024 flora_shop. All right reserved.</p>
@@ -165,6 +156,12 @@
     function redirectToHome() {
         window.location.href = "/";
     }
+
+    document.getElementById('quantity').addEventListener('input', function () {
+        const quantity = this.value;
+        document.getElementById('hiddenQuantity').value = quantity;
+        document.getElementById('hiddenCartQuantity').value = quantity;
+    });
 </script>
 
 </html>
